examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__decorated_definitions@@a.bclass C:  @d(1)  @e[2].f.g  def f():    g.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            DecoratedDefinition(
                DecoratedDefinition {
                    definition: ClassDefinition(
                        ClassDefinition {
                            type_parameters: None,
                            name: Identifier {
                                [RANGE]
                            },
                            body: Block {
                                alternative: [],
                                children: [
                                    CompoundStatement(
                                        DecoratedDefinition(
                                            DecoratedDefinition {
                                                definition: FunctionDefinition(
                                                    FunctionDefinition {
                                                        name: Identifier {
                                                            [RANGE]
                                                        },
                                                        body: Block {
                                                            alternative: [],
                                                            children: [
                                                                SimpleStatement(
                                                                    ExpressionStatement(
                                                                        ExpressionStatement {
                                                                            children: [
                                                                                Expression(
                                                                                    PrimaryExpression(
                                                                                        Identifier(
                                                                                            Identifier {
                                                                                                [RANGE]
                                                                                            },
                                                                                        ),
                                                                                    ),
                                                                                ),
                                                                            ],
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                ),
                                                            ],
                                                            [RANGE]
                                                        },
                                                        return_type: None,
                                                        type_parameters: None,
                                                        parameters: Parameters {
                                                            children: [],
                                                            [RANGE]
                                                        },
                                                        [RANGE]
                                                    },
                                                ),
                                                children: [
                                                    Decorator {
                                                        children: PrimaryExpression(
                                                            Call(
                                                                Call {
                                                                    function: Identifier(
                                                                        Identifier {
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                    arguments: ArgumentList(
                                                                        ArgumentList {
                                                                            children: [
                                                                                Expression(
                                                                                    PrimaryExpression(
                                                                                        Integer(
                                                                                            Integer {
                                                                                                [RANGE]
                                                                                            },
                                                                                        ),
                                                                                    ),
                                                                                ),
                                                                            ],
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                        [RANGE]
                                                    },
                                                    Decorator {
                                                        children: PrimaryExpression(
                                                            Attribute(
                                                                Attribute {
                                                                    attribute: Identifier {
                                                                        [RANGE]
                                                                    },
                                                                    object: Attribute(
                                                                        Attribute {
                                                                            attribute: Identifier {
                                                                                [RANGE]
                                                                            },
                                                                            object: Subscript(
                                                                                Subscript {
                                                                                    value: Identifier(
                                                                                        Identifier {
                                                                                            [RANGE]
                                                                                        },
                                                                                    ),
                                                                                    subscript: [
                                                                                        Expression(
                                                                                            PrimaryExpression(
                                                                                                Integer(
                                                                                                    Integer {
                                                                                                        [RANGE]
                                                                                                    },
                                                                                                ),
                                                                                            ),
                                                                                        ),
                                                                                    ],
                                                                                    [RANGE]
                                                                                },
                                                                            ),
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                        [RANGE]
                                                    },
                                                ],
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                ],
                                [RANGE]
                            },
                            superclasses: None,
                            [RANGE]
                        },
                    ),
                    children: [
                        Decorator {
                            children: PrimaryExpression(
                                Attribute(
                                    Attribute {
                                        attribute: Identifier {
                                            [RANGE]
                                        },
                                        object: Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                            [RANGE]
                        },
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
