examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__delete_statements.snap
---
source: src/tests/corpus/statements.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Module {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
            ],
            _range: Range {
                start_byte: 1,
                end_byte: 16,
                start_point: Point {
                    row: 1,
                    column: 0,
                },
                end_point: Point {
                    row: 2,
                    column: 0,
                },
            },
            _id: 0,
            _parent: None,
        },
        SimpleStatement(
            DeleteStatement(
                DeleteStatement {
                    children: AstNodeId {
                        id: 2,
                        _marker: PhantomData<ast_python::generated::Expression_ExpressionList>,
                    },
                    _range: Range {
                        start_byte: 1,
                        end_byte: 15,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 14,
                        },
                    },
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                },
            ),
        ),
        ExpressionList(
            ExpressionList {
                children: [
                    AstNodeId {
                        id: 3,
                        _marker: PhantomData<ast_python::generated::Expression>,
                    },
                    AstNodeId {
                        id: 6,
                        _marker: PhantomData<ast_python::generated::Expression>,
                    },
                ],
                _range: Range {
                    start_byte: 5,
                    end_byte: 15,
                    start_point: Point {
                        row: 1,
                        column: 4,
                    },
                    end_point: Point {
                        row: 1,
                        column: 14,
                    },
                },
                _id: 2,
                _parent: Some(
                    1,
                ),
            },
        ),
        PrimaryExpression(
            Subscript(
                Subscript {
                    subscript: [
                        AstNodeId {
                            id: 5,
                            _marker: PhantomData<ast_python::generated::Expression_Slice>,
                        },
                    ],
                    value: AstNodeId {
                        id: 4,
                        _marker: PhantomData<ast_python::generated::PrimaryExpression>,
                    },
                    _range: Range {
                        start_byte: 5,
                        end_byte: 9,
                        start_point: Point {
                            row: 1,
                            column: 4,
                        },
                        end_point: Point {
                            row: 1,
                            column: 8,
                        },
                    },
                    _id: 3,
                    _parent: Some(
                        2,
                    ),
                },
            ),
        ),
        Identifier(
            Identifier {
                _range: Range {
                    start_byte: 5,
                    end_byte: 6,
                    start_point: Point {
                        row: 1,
                        column: 4,
                    },
                    end_point: Point {
                        row: 1,
                        column: 5,
                    },
                },
                _id: 4,
                _parent: Some(
                    3,
                ),
            },
        ),
        Expression(
            PrimaryExpression(
                Integer(
                    Integer {
                        _range: Range {
                            start_byte: 7,
                            end_byte: 8,
                            start_point: Point {
                                row: 1,
                                column: 6,
                            },
                            end_point: Point {
                                row: 1,
                                column: 7,
                            },
                        },
                        _id: 5,
                        _parent: Some(
                            3,
                        ),
                    },
                ),
            ),
        ),
        PrimaryExpression(
            Subscript(
                Subscript {
                    subscript: [
                        AstNodeId {
                            id: 8,
                            _marker: PhantomData<ast_python::generated::Expression_Slice>,
                        },
                    ],
                    value: AstNodeId {
                        id: 7,
                        _marker: PhantomData<ast_python::generated::PrimaryExpression>,
                    },
                    _range: Range {
                        start_byte: 11,
                        end_byte: 15,
                        start_point: Point {
                            row: 1,
                            column: 10,
                        },
                        end_point: Point {
                            row: 1,
                            column: 14,
                        },
                    },
                    _id: 6,
                    _parent: Some(
                        2,
                    ),
                },
            ),
        ),
        Identifier(
            Identifier {
                _range: Range {
                    start_byte: 11,
                    end_byte: 12,
                    start_point: Point {
                        row: 1,
                        column: 10,
                    },
                    end_point: Point {
                        row: 1,
                        column: 11,
                    },
                },
                _id: 7,
                _parent: Some(
                    6,
                ),
            },
        ),
        Expression(
            PrimaryExpression(
                Integer(
                    Integer {
                        _range: Range {
                            start_byte: 13,
                            end_byte: 14,
                            start_point: Point {
                                row: 1,
                                column: 12,
                            },
                            end_point: Point {
                                row: 1,
                                column: 13,
                            },
                        },
                        _id: 8,
                        _parent: Some(
                            6,
                        ),
                    },
                ),
            ),
        ),
    ],
}
