examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__delete_statements@del a[1], b[2].snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            DeleteStatement(
                DeleteStatement {
                    children: ExpressionList(
                        ExpressionList {
                            children: [
                                PrimaryExpression(
                                    Subscript(
                                        Subscript {
                                            value: Identifier(
                                                Identifier {
                                                    [RANGE]
                                                },
                                            ),
                                            subscript: [
                                                Expression(
                                                    PrimaryExpression(
                                                        Integer(
                                                            Integer {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                ),
                                            ],
                                            [RANGE]
                                        },
                                    ),
                                ),
                                PrimaryExpression(
                                    Subscript(
                                        Subscript {
                                            value: Identifier(
                                                Identifier {
                                                    [RANGE]
                                                },
                                            ),
                                            subscript: [
                                                Expression(
                                                    PrimaryExpression(
                                                        Integer(
                                                            Integer {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                ),
                                            ],
                                            [RANGE]
                                        },
                                    ),
                                ),
                            ],
                            [RANGE]
                        },
                    ),
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
