examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__exec_statements@exec 'x+=1' in None.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExecStatement(
                ExecStatement {
                    code: String(
                        String {
                            children: [
                                StringStart(
                                    StringStart {
                                        [RANGE]
                                    },
                                ),
                                StringContent(
                                    StringContent {
                                        children: [],
                                        [RANGE]
                                    },
                                ),
                                StringEnd(
                                    StringEnd {
                                        [RANGE]
                                    },
                                ),
                            ],
                            [RANGE]
                        },
                    ),
                    children: [
                        PrimaryExpression(
                            String(
                                String {
                                    children: [
                                        StringStart(
                                            StringStart {
                                                [RANGE]
                                            },
                                        ),
                                        StringContent(
                                            StringContent {
                                                children: [],
                                                [RANGE]
                                            },
                                        ),
                                        StringEnd(
                                            StringEnd {
                                                [RANGE]
                                            },
                                        ),
                                    ],
                                    [RANGE]
                                },
                            ),
                        ),
                        PrimaryExpression(
                            None(
                                None {
                                    [RANGE]
                                },
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
