examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__exec_statements@exec func in {}.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExecStatement(
                ExecStatement {
                    code: Identifier(
                        Identifier {
                            [RANGE]
                        },
                    ),
                    children: [
                        PrimaryExpression(
                            Identifier(
                                Identifier {
                                    [RANGE]
                                },
                            ),
                        ),
                        PrimaryExpression(
                            Dictionary(
                                Dictionary {
                                    children: [],
                                    [RANGE]
                                },
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
